--- a/index.html
+++ b/index.html
@@ -33,31 +33,36 @@
     <div class="row">
 
       <div class="crystalButtons" w-100>
-        <button type="button" class="btn btn-danger">Button 1</button>
-        <button type="button" class="btn btn-primary">Button 2</Button></button>
-        <button type="button" class="btn btn-secondary">Button 3</button>
-        <button type="button" class="btn btn-success">Button 4</button>
+
+        <img src="https://t6.rbxcdn.com/5da98730977895279f05af2eb7bd7516" class="img-fluid" alt="Responsive image">
+
+        <img src="https://vignette.wikia.nocookie.net/vsdebating/images/d/d2/200px-FireFlowerMK8.png/revision/latest?cb=20170129031918" class="img-fluid" alt="Responsive image">
+     
+        <img src="https://www.mariowiki.com/images/thumb/9/94/MushroomMarioKart8.png/200px-MushroomMarioKart8.png" class="img-fluid" alt="Responsive image">
+
+        <img src="https://www.mariowiki.com/images/thumb/f/f5/StarMK8.png/200px-StarMK8.png" class="img-fluid" alt="Responsive image">
+ 
       </div>
 
       <div class="w-100">
         <br>
-      <div class="numberGuessed" col-6>
-        <div class="gameStats" col-4>
-          <h2>wins:</h2>
-          <h2>losses:</h2>
+        <div class="numberGuessed" col-6>
+          <div class="gameStats" col-4>
+            <h2>wins:</h2>
+            <h2>losses:</h2>
+          </div>
         </div>
       </div>
-    </div>
 
 
 
-    <div>
-      <h3>Your total score is: </h3>
-    </div>
+      <div>
+        <h3>Your total score is: </h3>
+      </div>
 
-    <div class="totalScore">
+      <div class="totalScore">
 
-    </div>
+      </div>
 
 </body>
 
