--- a/index.html
+++ b/index.html
@@ -27,21 +27,29 @@
     <p>The value of each crystal is hidden until you click on it.</p>
 
     <p>Each time the game starts, the game will change the values of each crystal.</p>
+
+    <button type="button" id="newGame" class="btn btn-primary text-light bg-dark">New Game</button>
   </div>
 
   <div class="container">
     <div class="row">
+      <!-- add span to wins and losses -->
+      <h3>Computer Guess: <span id="computerGuess"></span></h3>
+      <h3>Your Score: <span id="userScore"></span></h3>
 
       <div class="crystalButtons" w-100>
 
-        <img src="https://t6.rbxcdn.com/5da98730977895279f05af2eb7bd7516" class="img-fluid" alt="Responsive image">
+        <img src="https://t6.rbxcdn.com/5da98730977895279f05af2eb7bd7516" class="img-fluid" id="image1" alt="Responsive image">
 
-        <img src="https://vignette.wikia.nocookie.net/vsdebating/images/d/d2/200px-FireFlowerMK8.png/revision/latest?cb=20170129031918" class="img-fluid" alt="Responsive image">
-     
-        <img src="https://www.mariowiki.com/images/thumb/9/94/MushroomMarioKart8.png/200px-MushroomMarioKart8.png" class="img-fluid" alt="Responsive image">
+        <img src="https://vignette.wikia.nocookie.net/vsdebating/images/d/d2/200px-FireFlowerMK8.png/revision/latest?cb=20170129031918"
+          class="img-fluid" id="image2" alt="Responsive image">
 
-        <img src="https://www.mariowiki.com/images/thumb/f/f5/StarMK8.png/200px-StarMK8.png" class="img-fluid" alt="Responsive image">
- 
+        <img src="https://www.mariowiki.com/images/thumb/9/94/MushroomMarioKart8.png/200px-MushroomMarioKart8.png"
+          class="img-fluid" alt="Responsive image" id="image3">
+
+        <img src="https://www.mariowiki.com/images/thumb/f/f5/StarMK8.png/200px-StarMK8.png" class="img-fluid" id="image4"
+          alt="Responsive image">
+
       </div>
 
       <div class="w-100">
@@ -55,15 +63,12 @@
       </div>
 
 
-
-      <div>
-        <h3>Your total score is: </h3>
-      </div>
-
       <div class="totalScore">
 
       </div>
-
+      <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
+      <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
