--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
   </div>
 
   <div class="container">
-    <div class="row">
-      <!-- add span to wins and losses -->
-      <h3>Computer Guess: <span id="computerGuess"></span></h3>
-      <h3>Your Score: <span id="userScore"></span></h3>
+    
+      
+      <h4>Computer Guess: <span id="computerGuess"></span></h4>
+<div class="row"></div>
+      <h4>Your Score: <span id="userScore"></span></h4>
 
       <div class="crystalButtons" w-100>
 
@@ -54,8 +55,8 @@
 
       <div class="w-100">
         <br>
-        <div class="numberGuessed" col-6>
-          <div class="gameStats" col-4>
+        <div class="wins" col-6>
+          <div class="losses" col-4>
             <h2>wins:</h2>
             <h2>losses:</h2>
           </div>
