--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>crystalsCollector</title>
+  <title>.buttonMasher</title>
 </head>
 
 <body>
-  <nav class="nav">
 
-    The crystalsCollector Game!
-
-  </nav>
-  <div class="jumbotron" bg-dark text-light text-align center>
+  <div class="nav" bg-dark text-light text-align center>
+      <nav class="jumbotron">
+          <h1>Mash the Powerups!</h1>
+            </nav>
 
     <p>You will be given a random number at the start of the game.</p>
     <p>There are four cystals below. By clicking on a crystal you will add a specific amount of points to your
@@ -38,7 +39,7 @@
 <div class="row"></div>
       <h4>Your Score: <span id="userScore"></span></h4>
 
-      <div class="crystalButtons" w-100>
+      <div class="buttonsArea" w-100>
 
         <img src="https://t6.rbxcdn.com/5da98730977895279f05af2eb7bd7516" class="img-fluid" id="image1" alt="Responsive image">
 
