--- a/index.html
+++ b/index.html
@@ -9,68 +9,55 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>.buttonMasher</title>
+  <title>Crystal Collector</title>
 </head>
 
 <body>
 
-  <div class="nav" bg-dark text-light text-align center>
-      <nav class="jumbotron">
-          <h1>Mash the Powerups!</h1>
-            </nav>
+  <div class="jumbotron jumbotron-fluid">
+    <h1>Crystal Collector</h1>
+  </div>
+  <br><br>
+  <div class="buttons">
+    <button type="button" class="btn btn-success">New Game</button>
+  </div>
+  <br><br>
+  <h2>How to Play</h2>
 
-    <p>You will be given a random number at the start of the game.</p>
-    <p>There are four cystals below. By clicking on a crystal you will add a specific amount of points to your
-      totalscore.</p>
-    <p>You win the game by matching your total score to the random number. You lose the game if your total score goes
-      above the random number.</p>
-
-    <p>The value of each crystal is hidden until you click on it.</p>
-
-    <p>Each time the game starts, the game will change the values of each crystal.</p>
-
-    <button type="button" id="newGame" class="btn btn-primary text-light bg-dark">New Game</button>
+  <div class="instructions">
+    <p>
+      You will be given a random number at the start of the game. Use the crystals to match your points to the random number. The value of the crystals changes for every game and you must figure out their values on your own.
+    </p>
+    <p>
+      Match your points to the random number to win. If you go over, you lose!
+    </p>
   </div>
 
   <div class="container">
+   
+    <p>Computer's Number: <span id="computerGuess"></span></p>
     
-      
-      <h4>Computer Guess: <span id="computerGuess"></span></h4>
-<div class="row"></div>
-      <h4>Your Score: <span id="userScore"></span></h4>
+    <p>Your Score: <span id="userScore"></span></p>
+  </div>
+    <div class="buttonsArea" w-100>
 
-      <div class="buttonsArea" w-100>
+      <img src="https://vignette.wikia.nocookie.net/battlefordreamisland/images/5/5e/Ruby_Icon.png/revision/latest/scale-to-width-down/640?cb=20170123035914" class="img-fluid" id="image1" alt="Responsive image">
 
-        <img src="https://t6.rbxcdn.com/5da98730977895279f05af2eb7bd7516" class="img-fluid" id="image1" alt="Responsive image">
+      <img src="http://icons.iconarchive.com/icons/dakirby309/simply-styled/256/Bejeweled-icon.png"
+        class="img-fluid" id="image2" alt="Responsive image">
 
-        <img src="https://vignette.wikia.nocookie.net/vsdebating/images/d/d2/200px-FireFlowerMK8.png/revision/latest?cb=20170129031918"
-          class="img-fluid" id="image2" alt="Responsive image">
+      <img src="https://vignette.wikia.nocookie.net/csydes-test/images/b/ba/Crash_Nitro_Kart_Green_Gem.png/revision/latest?cb=20170520064718" class="img-fluid"
+        alt="Responsive image" id="image3">
 
-        <img src="https://www.mariowiki.com/images/thumb/9/94/MushroomMarioKart8.png/200px-MushroomMarioKart8.png"
-          class="img-fluid" alt="Responsive image" id="image3">
+      <img src="https://vignette.wikia.nocookie.net/steven-universe/images/c/c7/Right_Cheek_Amethyst_Gem.png/revision/latest/scale-to-width-down/481?cb=20170202025940" class="img-fluid" id="image4"
+        alt="Responsive image">
 
-        <img src="https://www.mariowiki.com/images/thumb/f/f5/StarMK8.png/200px-StarMK8.png" class="img-fluid" id="image4"
-          alt="Responsive image">
-
-      </div>
-
-      <div class="w-100">
-        <br>
-        <div class="wins" col-6>
-          <div class="losses" col-4>
-            <h2>wins:</h2>
-            <h2>losses:</h2>
-          </div>
-        </div>
-      </div>
+    </div>
 
 
-      <div class="totalScore">
-
-      </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-        crossorigin="anonymous"></script>
-      <script src="assets/javascript/game.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
