fixed all the bugs finally

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
 
   <div class="container">
    
-    <p>Computer's Number: <span id="computerGuess"></span></p>
-    
-    <p>Your Score: <span id="userScore"></span></p>
+    <p>Computer's Number: <span id="computerGuess"></span> || Your Number: <span id="userScore"></span></p>
+    <p>Wins: <span id="gamesWon"></span> || Losses: <span id="gamesLost"></span></p>
   </div>
     <div class="buttonsArea" w-100>
 
