--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Titillium+Web" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,600" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Crystal Collector</title>
 </head>
@@ -15,7 +15,10 @@
 <body>
 
   <div class="jumbotron jumbotron-fluid">
-    <h1>Crystal Collector</h1>
+       <p>Crystal Collector
+  
+  <a href="https://github.com/randomclamshell/crystalCollector"> 
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/Ei-sc-github.svg/1024px-Ei-sc-github.svg.png" width="10%" height="10%"></a></p>
   </div>
   <br><br>
   <div class="buttons">
